# scribble-together.com

./: .gitignore  Cargo.toml  README.md  index.html
frontend/: index.html
frontend/scripts/: client.js  index.html  main.js
frontend/styles/: colors.css  style.css
src/: chunk.rs  common.rs  main.rs  prelude.rs
src/endpoints/: files.rs  get.rs  mod.rs
src/websockets/: handler.rs
styles/: colors.css  style.css
