[package]
name = "scribble-together"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.18"
actix-files="0.6.0-beta.12"
actix-web-actors= "4.0.0-beta.9"
actix= "0.12"
actix-rt= "2"
actix-http= "2"
bytes= "1"
futures-util= "0.3"